// Copyright (c) 2020 Uber Technologies, Inc.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

package uber.cadence.shared.v1;

option go_package = "github.com/uber/cadence/.gen/proto/shared/v1;sharedv1";

import "uber/cadence/api/v1/common.proto";
import "uber/cadence/admin/v1/history.proto";

message CurrentBranchChangedError {
  bytes current_branch_token = 1;
}

message InternalDataInconsistencyError {
}

message EventAlreadyStartedError {
}

message RemoteSyncMatchedError {
}

message RetryTaskV2Error {
  string domain_id = 1;
  api.v1.WorkflowExecution workflow_execution = 2;
  admin.v1.VersionHistoryItem start_event = 3;
  admin.v1.VersionHistoryItem end_event = 4;
}

message ShardOwnershipLostError {
  string owner = 1;
}

message TaskListNotOwnedByHostError {
  string owned_by_identity = 1;
  string my_identity = 2;
  string task_list_name = 3;
}
